--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5544,6 +5544,10 @@ select {
 }
 @media (min-width: 640px) {
 
+   .md\:hidden {
+      display: none;
+    }
+  
   .sm\:mt-20 {
     margin-top: 5rem;
   }
