Update main.css menu toggle hidden

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5544,9 +5544,9 @@ select {
 }
 @media (min-width: 640px) {
 
-   .md\:hidden {
-      display: none;
-    }
+  .menu-toggle {
+		display: none;
+	}
   
   .sm\:mt-20 {
     margin-top: 5rem;
